MatlabParser.py
# Generated from Matlab.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MatlabParser ( Parser ):

    grammarFileName = "Matlab.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'end'", "'global'", "'return'", 
                     "'while'", "'if'", "'elseif'", "'else'", "'break'", 
                     "'continue'", "'union'", "'setdiff'", "'ismember'", 
                     "'+'", "'-'", "'*'", "'/'", "'&'", "'|'", "'~'", "'&&'", 
                     "'||'", "'=='", "'~='", "'<'", "'<='", "'>'", "'>='", 
                     "'true'", "'false'", "'['", "']'", "'('", "')'", "'{'", 
                     "'}'", "','", "';'", "'='", "'.'", "':'", "'''", "'\"'", 
                     "'%'" ]

    symbolicNames = [ "<INVALID>", "FUCTION", "END", "GLOBAL", "RETURN", 
                      "WHILE", "IF", "ELSEIF", "ELSE", "BREAK", "CONTINUE", 
                      "UNION", "SETDIFF", "ISMEMBER", "ADD", "SUB", "MUL", 
                      "DIV", "AND", "OR", "NOT", "LOGICAL_AND", "LOGICAL_OR", 
                      "EQUAL", "UNEQUAL", "LESS", "LESS_EQUAL", "GREATER", 
                      "GREATER_EQUAL", "TRUE_VALUE", "FALSE_VALUE", "LEFTBRACKET", 
                      "RIGHTBRACKET", "LEFTPAREN", "RIGHTPAREN", "LEFTBRACE", 
                      "RIGHTBRACE", "COMMA", "SEMICOLON", "ASSIGN", "DOT", 
                      "COLON", "QUOTE", "DOUBLEQUOTE", "DEFINEMARK", "NAME", 
                      "NAMEPLUS", "DIGIT", "NULL_ASSIGN", "WS" ]

    RULE_function = 0
    RULE_function_declare = 1
    RULE_returnparas = 2
    RULE_leftbracket = 3
    RULE_rightbracket = 4
    RULE_return_name = 5
    RULE_name = 6
    RULE_definemark = 7
    RULE_typedef = 8
    RULE_ruledef = 9
    RULE_nameplus = 10
    RULE_cate = 11
    RULE_digit = 12
    RULE_null_assign = 13
    RULE_expr = 14
    RULE_binary_operation = 15
    RULE_unary_operation = 16
    RULE_truth_value = 17
    RULE_location_name = 18
    RULE_location = 19
    RULE_element = 20
    RULE_paralist = 21
    RULE_statement = 22
    RULE_global_define_list = 23
    RULE_com_statement = 24
    RULE_assign_state = 25
    RULE_function_call = 26
    RULE_return_state = 27
    RULE_while_state = 28
    RULE_if_state = 29
    RULE_elseif_state = 30
    RULE_else_state = 31
    RULE_break_state = 32
    RULE_continue_state = 33
    RULE_element_insert_state = 34
    RULE_element_delete_state = 35
    RULE_element_ismember_set = 36
    RULE_element_take = 37

    ruleNames =  [ "function", "function_declare", "returnparas", "leftbracket", 
                   "rightbracket", "return_name", "name", "definemark", 
                   "typedef", "ruledef", "nameplus", "cate", "digit", "null_assign", 
                   "expr", "binary_operation", "unary_operation", "truth_value", 
                   "location_name", "location", "element", "paralist", "statement", 
                   "global_define_list", "com_statement", "assign_state", 
                   "function_call", "return_state", "while_state", "if_state", 
                   "elseif_state", "else_state", "break_state", "continue_state", 
                   "element_insert_state", "element_delete_state", "element_ismember_set", 
                   "element_take" ]

    EOF = Token.EOF
    FUCTION=1
    END=2
    GLOBAL=3
    RETURN=4
    WHILE=5
    IF=6
    ELSEIF=7
    ELSE=8
    BREAK=9
    CONTINUE=10
    UNION=11
    SETDIFF=12
    ISMEMBER=13
    ADD=14
    SUB=15
    MUL=16
    DIV=17
    AND=18
    OR=19
    NOT=20
    LOGICAL_AND=21
    LOGICAL_OR=22
    EQUAL=23
    UNEQUAL=24
    LESS=25
    LESS_EQUAL=26
    GREATER=27
    GREATER_EQUAL=28
    TRUE_VALUE=29
    FALSE_VALUE=30
    LEFTBRACKET=31
    RIGHTBRACKET=32
    LEFTPAREN=33
    RIGHTPAREN=34
    LEFTBRACE=35
    RIGHTBRACE=36
    COMMA=37
    SEMICOLON=38
    ASSIGN=39
    DOT=40
    COLON=41
    QUOTE=42
    DOUBLEQUOTE=43
    DEFINEMARK=44
    NAME=45
    NAMEPLUS=46
    DIGIT=47
    NULL_ASSIGN=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUCTION(self):
            return self.getToken(MatlabParser.FUCTION, 0)

        def function_declare(self):
            return self.getTypedRuleContext(MatlabParser.Function_declareContext,0)


        def END(self):
            return self.getToken(MatlabParser.END, 0)

        def statement(self):
            return self.getTypedRuleContext(MatlabParser.StatementContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = MatlabParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(MatlabParser.FUCTION)
            self.state = 77
            self.function_declare()
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 78
                self.statement()


            self.state = 81
            self.match(MatlabParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(MatlabParser.NameContext,0)


        def paralist(self):
            return self.getTypedRuleContext(MatlabParser.ParalistContext,0)


        def returnparas(self):
            return self.getTypedRuleContext(MatlabParser.ReturnparasContext,0)


        def ASSIGN(self):
            return self.getToken(MatlabParser.ASSIGN, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_function_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declare" ):
                listener.enterFunction_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declare" ):
                listener.exitFunction_declare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declare" ):
                return visitor.visitFunction_declare(self)
            else:
                return visitor.visitChildren(self)




    def function_declare(self):

        localctx = MatlabParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MatlabParser.LEFTBRACKET:
                self.state = 83
                self.returnparas()
                self.state = 84
                self.match(MatlabParser.ASSIGN)


            self.state = 88
            self.name()
            self.state = 89
            self.paralist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReturnparasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def leftbracket(self):
            return self.getTypedRuleContext(MatlabParser.LeftbracketContext,0)


        def return_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatlabParser.Return_nameContext)
            else:
                return self.getTypedRuleContext(MatlabParser.Return_nameContext,i)


        def rightbracket(self):
            return self.getTypedRuleContext(MatlabParser.RightbracketContext,0)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MatlabParser.COMMA)
            else:
                return self.getToken(MatlabParser.COMMA, i)

        def getRuleIndex(self):
            return MatlabParser.RULE_returnparas

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnparas" ):
                listener.enterReturnparas(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnparas" ):
                listener.exitReturnparas(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnparas" ):
                return visitor.visitReturnparas(self)
            else:
                return visitor.visitChildren(self)




    def returnparas(self):

        localctx = MatlabParser.ReturnparasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_returnparas)
        self._la = 0 # Token type
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.leftbracket()
                self.state = 92
                self.return_name()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MatlabParser.COMMA:
                    self.state = 93
                    self.match(MatlabParser.COMMA)
                    self.state = 94
                    self.return_name()
                    self.state = 99
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 100
                self.rightbracket()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.leftbracket()
                self.state = 103
                self.rightbracket()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LeftbracketContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFTBRACKET(self):
            return self.getToken(MatlabParser.LEFTBRACKET, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_leftbracket

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeftbracket" ):
                listener.enterLeftbracket(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeftbracket" ):
                listener.exitLeftbracket(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLeftbracket" ):
                return visitor.visitLeftbracket(self)
            else:
                return visitor.visitChildren(self)




    def leftbracket(self):

        localctx = MatlabParser.LeftbracketContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_leftbracket)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(MatlabParser.LEFTBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RightbracketContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHTBRACKET(self):
            return self.getToken(MatlabParser.RIGHTBRACKET, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_rightbracket

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRightbracket" ):
                listener.enterRightbracket(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRightbracket" ):
                listener.exitRightbracket(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRightbracket" ):
                return visitor.visitRightbracket(self)
            else:
                return visitor.visitChildren(self)




    def rightbracket(self):

        localctx = MatlabParser.RightbracketContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_rightbracket)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(MatlabParser.RIGHTBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(MatlabParser.NAME, 0)

        def NOT(self):
            return self.getToken(MatlabParser.NOT, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_return_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_name" ):
                listener.enterReturn_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_name" ):
                listener.exitReturn_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_name" ):
                return visitor.visitReturn_name(self)
            else:
                return visitor.visitChildren(self)




    def return_name(self):

        localctx = MatlabParser.Return_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_return_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not(_la==MatlabParser.NOT or _la==MatlabParser.NAME):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(MatlabParser.NAME, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = MatlabParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(MatlabParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinemarkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINEMARK(self):
            return self.getToken(MatlabParser.DEFINEMARK, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_definemark

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinemark" ):
                listener.enterDefinemark(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinemark" ):
                listener.exitDefinemark(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinemark" ):
                return visitor.visitDefinemark(self)
            else:
                return visitor.visitChildren(self)




    def definemark(self):

        localctx = MatlabParser.DefinemarkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_definemark)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(MatlabParser.DEFINEMARK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypedefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definemark(self):
            return self.getTypedRuleContext(MatlabParser.DefinemarkContext,0)


        def cate(self):
            return self.getTypedRuleContext(MatlabParser.CateContext,0)


        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MatlabParser.NameContext)
            else:
                return self.getTypedRuleContext(MatlabParser.NameContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MatlabParser.COMMA)
            else:
                return self.getToken(MatlabParser.COMMA, i)

        def nameplus(self):
            return self.getTypedRuleContext(MatlabParser.NameplusContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_typedef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedef" ):
                listener.enterTypedef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedef" ):
                listener.exitTypedef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedef" ):
                return visitor.visitTypedef(self)
            else:
                return visitor.visitChildren(self)




    def typedef(self):

        localctx = MatlabParser.TypedefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_typedef)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.definemark()
                self.state = 118
                self.cate()
                self.state = 119
                self.name()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MatlabParser.COMMA:
                    self.state = 120
                    self.match(MatlabParser.COMMA)
                    self.state = 121
                    self.name()
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.definemark()
                self.state = 128
                self.cate()
                self.state = 129
                self.nameplus()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RuledefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definemark(self):
            return self.getTypedRuleContext(MatlabParser.DefinemarkContext,0)


        def name(self):
            return self.getTypedRuleContext(MatlabParser.NameContext,0)


        def getRuleIndex(self):
            return MatlabParser.RULE_ruledef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuledef" ):
                listener.enterRuledef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuledef" ):
                listener.exitRuledef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuledef" ):
                return visitor.visitRuledef(self)
            else:
                return visitor.visitChildren(self)




    def ruledef(self):

        localctx = MatlabParser.RuledefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ruledef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.definemark()
            self.state = 134
            self.name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameplusContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAMEPLUS(self):
            return self.getToken(MatlabParser.NAMEPLUS, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_nameplus

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameplus" ):
                listener.enterNameplus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameplus" ):
                listener.exitNameplus(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameplus" ):
                return visitor.visitNameplus(self)
            else:
                return visitor.visitChildren(self)




    def nameplus(self):

        localctx = MatlabParser.NameplusContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_nameplus)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(MatlabParser.NAMEPLUS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(MatlabParser.NAME)
            else:
                return self.getToken(MatlabParser.NAME, i)

        def getRuleIndex(self):
            return MatlabParser.RULE_cate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCate" ):
                listener.enterCate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCate" ):
                listener.exitCate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCate" ):
                return visitor.visitCate(self)
            else:
                return visitor.visitChildren(self)




    def cate(self):

        localctx = MatlabParser.CateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_cate)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(MatlabParser.NAME)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(MatlabParser.NAME)
                self.state = 140
                self.match(MatlabParser.NAME)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DigitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIGIT(self):
            return self.getToken(MatlabParser.DIGIT, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_digit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDigit" ):
                listener.enterDigit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDigit" ):
                listener.exitDigit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDigit" ):
                return visitor.visitDigit(self)
            else:
                return visitor.visitChildren(self)




    def digit(self):

        localctx = MatlabParser.DigitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_digit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(MatlabParser.DIGIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Null_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NULL_ASSIGN(self):
            return self.getToken(MatlabParser.NULL_ASSIGN, 0)

        def getRuleIndex(self):
            return MatlabParser.RULE_null_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNull_assign" ):
                listener.enterNull_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNull_assign" ):
                listener.exitNull_assign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNull_assign" ):
                return visitor.visitNull_assign(self)
            else:
                return visitor.visitChildren(self)




    def null_assign(self):

        localctx = MatlabParser.Null_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_null_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(MatlabParser.NULL_ASSIGN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MatlabParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class StrExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MatlabParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def QUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(MatlabParser.QUOTE)
            else:
                return self.getToken(MatlabParser.QUOTE, i)
        def name(self):
            return self.getTypedRuleContext(MatlabParser.NameContext,0)

        def DOUBLEQUOTE(self, i:int=None):
            if i is None:
                return self.getTokens(MatlabParser.DOUBLEQUOTE)
            else:
                return self.getToken(MatlabParser.DOUBLEQUOTE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrExpr" ):
                listener.enterStrExpr(self)
